=== master

* Add on_parallel_fork_marshal_failure hook for handling marshal failures (child process exiting) (jeremyevans)

=== 1.1.2 (2018-07-05)

* Handle raised exceptions containing unmarshallable data (jeremyevans)

=== 1.1.1 (2018-05-07)

* Work around marshalling issue when there are failures in *_all hooks when using minitest-hooks (jeremyevans)

* Don't deadlock when a child process sends a large amount of marshalled data (chanks) (#4, #5)

=== 1.1.0 (2018-04-19)

* Remove DumpableUnexpectedError, require minitest 5.11.0+ (jeremyevans)

* Allow overriding the stat reporter used via Minitest.parallel_fork_stat_reporter method (jeremyevans) (#3)

=== 1.0.2 (2017-02-27)

* Show correct number of errors in output (jeremyevans)

=== 1.0.1 (2017-01-05)

* Work with test suites that use parallelize_me! (jeremyevans) (#1)

=== 1.0.0 (2015-05-11)

* Initial Public Release