@@ -1,5 +1,7 @@
 === master
 
+* Work correctly with Minitest 5.14+ (jeremyevans)
+
 * Add on_parallel_fork_marshal_failure hook for handling marshal failures (child process exiting) (jeremyevans)
 
 === 1.1.2 (2018-07-05)
